# educational-facilities-landscape

./: .gitignore  .gitlab-ci.yml  README.md  compose.deploy.yml  compose.yml  package-lock.json
.github/workflows/: ci.yml  pages.yml
backend/: Dockerfile  build.gradle  checkstyle.xml  settings.gradle
backend/src/main/java/com/jade/educational_facilities/: EducationalFacilitiesApplication.java
backend/src/main/java/com/jade/educational_facilities/controllers/: HealthController.java
backend/src/main/java/com/jade/educational_facilities/facilities/controllers/: FacilityController.java
backend/src/main/java/com/jade/educational_facilities/facilities/dao/: FacilityDao.java
backend/src/main/resources/: application.properties
backend/src/test/java/com/jade/educational_facilities/: EducationalFacilitiesApplicationTests.java
backend/src/test/java/com/jade/educational_facilities/controllers/: HealthControllerTest.java
database/: init.sql
frontend/: .eslintrc.json  Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.test.tsx  App.tsx
frontend/src/components/: FacilityComparisonChart.test.tsx  FacilityComparisonChart.tsx  FacilityMap.test.tsx  FacilityMap.tsx  ImmersionPieChart.tsx  facilityComparisonStyles.ts
frontend/src/hooks/: useFacilities.test.ts  useFacilities.ts  useFacilityComparison.ts
frontend/src/types/: Facility.ts
frontend/src/utils/: facilityApi.ts
python/: Dockerfile  app.py  import_csv.py  pyproject.toml  testDB.py
(+8 files in other folders)
