[tool.poetry]
name = "your-project-python"
version = "0.1.0"
description = "Python service for your project"
authors = ["Your Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0"
pandas = "*"
sqlalchemy = "*"
pymysql = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
flake8 = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"